terragrunt/kserve/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      proxy.istio.io/config: '{"gatewayTopology" : { "proxyProtocol": {} }}'
      service.beta.kubernetes.io/scw-loadbalancer-private: "true"
      service.beta.kubernetes.io/scw-loadbalancer-proxy-protocol-v2: "true"
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
spec:
  parentRefs:
  - name: httpbin-gateway
  rules:
  - backendRefs:
    - name: httpbin
      port: 8000
