terragrunt/kserve/ip-filter.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-ip-allowlist
spec:
  selector:
    matchLabels:
      app: httpbin
  action: ALLOW
  rules:
  - from:
    - source:
        remoteIpBlocks:
        - "82.66.115.183/32"
        - "172.16.12.0/22"
